[gd_scene load_steps=11 format=4 uid="uid://ddpbjchb1i7gf"]

[ext_resource type="Script" uid="uid://c6tr03bufx0qy" path="res://scenes/maps/main.gd" id="1_pwihf"]
[ext_resource type="PackedScene" uid="uid://d2eg4k27l7r3x" path="res://scenes/managers/enemy_manager.tscn" id="2_6hyye"]
[ext_resource type="PackedScene" uid="uid://ytugbeirroj4" path="res://scenes/ui/pause_menu/pause_menu.tscn" id="3_n56wl"]
[ext_resource type="PackedScene" uid="uid://ck57twspucmjh" path="res://scenes/ui/game_ui/game_ui.tscn" id="4_gx8es"]
[ext_resource type="PackedScene" uid="uid://ckhi6wvw5p180" path="res://scenes/managers/lobby_manager.tscn" id="5_m6k0o"]
[ext_resource type="PackedScene" uid="uid://h45qqgcpv0pr" path="res://scenes/managers/upgrade_manager.tscn" id="6_ss43a"]
[ext_resource type="PackedScene" uid="uid://bywi580c23ct5" path="res://scenes/game_objects/camera/game_camera.tscn" id="7_m6k0o"]
[ext_resource type="TileSet" uid="uid://d1h0abmurdg1k" path="res://resources/filled_color_tilemap.tres" id="8_ss43a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6hyye"]
size = Vector2(32, 300)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gx8es"]
size = Vector2(500, 32)

[node name="Main" type="Node"]
script = ExtResource("1_pwihf")

[node name="GameUI" parent="." node_paths=PackedStringArray("enemy_manager", "lobby_manager", "upgrade_manager") instance=ExtResource("4_gx8es")]
enemy_manager = NodePath("../EnemyManager")
lobby_manager = NodePath("../LobbyManager")
upgrade_manager = NodePath("../UpgradeManager")

[node name="PauseMenu" parent="." node_paths=PackedStringArray("upgrade_manager") instance=ExtResource("3_n56wl")]
visible = false
upgrade_manager = NodePath("../UpgradeManager")

[node name="EnemyManager" parent="." node_paths=PackedStringArray("upgrade_manager", "enemy_spawn_root", "spawn_rect") instance=ExtResource("2_6hyye")]
upgrade_manager = NodePath("../UpgradeManager")
enemy_spawn_root = NodePath("../YSortRoot")
spawn_rect = NodePath("../SpawnRect")

[node name="LobbyManager" parent="." instance=ExtResource("5_m6k0o")]

[node name="UpgradeManager" parent="." node_paths=PackedStringArray("enemy_manager", "spawn_position", "spawn_root") instance=ExtResource("6_ss43a")]
enemy_manager = NodePath("../EnemyManager")
spawn_position = NodePath("../CenterPosition")
spawn_root = NodePath("../YSortRoot")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://dklgqdynioec2", "uid://1qn0jxgmvkke", "uid://dnf64l10txloj", "uid://c2bhr20hgoyun")
spawn_path = NodePath("../YSortRoot")

[node name="GameCamera" parent="." instance=ExtResource("7_m6k0o")]
position = Vector2(320, 185)

[node name="CenterPosition" type="Marker2D" parent="."]
position = Vector2(320, 185)
metadata/_edit_lock_ = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
clip_children = 2
tile_map_data = PackedByteArray("AAAgABAAAgACAAAAAAAgAA8AAgACAAAAAAAgAA4AAgAGAAAAAAAgAA0AAgADAAAAAAAgAAwAAgABAAAAAAAgAAsAAgACAAAAAAAgAAoAAgAAAAAAAAAgAAkAAgABAAAAAAAgAAgAAgAAAAAAAAAgAAcAAgAAAAAAAAAgAAYAAgAAAAAAAAAgAAUAAgAFAAAAAAAgAAQAAgABAAAAAAAgAAMAAgAAAAAAAAAgAAIAAgAAAAAAAAAgAAEAAgABAAAAAAAgAAAAAgABABAAAAAfABAAAgADAAAAAAAfAA8AAgAAAAAAAAAfAA4AAgAAAAAAAAAfAA0AAgAHAAAAAAAfAAwAAgAHAAAAAAAfAAsAAgAGAAAAAAAfAAoAAgAAAAAAAAAfAAkAAgABAAAAAAAfAAgAAgAAAAAAAAAfAAcAAgAGAAAAAAAfAAYAAgAEAAAAAAAfAAUAAgABAAAAAAAfAAQAAgACAAAAAAAfAAMAAgACAAAAAAAfAAIAAgAFAAAAAAAfAAEAAgAEAAAAAAAfAAAAAgABABAAAAAeABAAAgAGAAAAAAAeAA8AAgACAAAAAAAeAA4AAgAFAAAAAAAeAA0AAgAAAAAAAAAeAAwAAgAAAAAAAAAeAAsAAgAAAAAAAAAeAAoAAgAHAAAAAAAeAAkAAgABAAAAAAAeAAgAAgAAAAAAAAAeAAcAAgACAAAAAAAeAAYAAgADAAAAAAAeAAUAAgAAAAAAAAAeAAQAAgABAAAAAAAeAAMAAgADAAAAAAAeAAIAAgAAAAAAAAAeAAEAAgAHAAAAAAAeAAAAAgABABAAAAAdABAAAgADAAAAAAAdAA8AAgABAAAAAAAdAA4AAgAAAAAAAAAdAA0AAgAFAAAAAAAdAAwAAgABAAAAAAAdAAsAAgABAAAAAAAdAAoAAgAAAAAAAAAdAAkAAgAAAAAAAAAdAAgAAgAGAAAAAAAdAAcAAgABAAAAAAAdAAYAAgAAAAAAAAAdAAUAAgABAAAAAAAdAAQAAgAAAAAAAAAdAAMAAgAGAAAAAAAdAAIAAgAAAAAAAAAdAAEAAgAGAAAAAAAdAAAAAgABABAAAAAcABAAAgABAAAAAAAcAA8AAgAAAAAAAAAcAA4AAgACAAAAAAAcAA0AAgABAAAAAAAcAAwAAgAAAAAAAAAcAAsAAgAFAAAAAAAcAAoAAgAAAAAAAAAcAAkAAgABAAAAAAAcAAgAAgAAAAAAAAAcAAcAAgADAAAAAAAcAAYAAgAAAAAAAAAcAAUAAgAHAAAAAAAcAAQAAgAGAAAAAAAcAAMAAgAAAAAAAAAcAAIAAgACAAAAAAAcAAEAAgAAAAAAAAAcAAAAAgABABAAAAAbABAAAgABAAAAAAAbAA8AAgAAAAAAAAAbAA4AAgAAAAAAAAAbAA0AAgAEAAAAAAAbAAwAAgACAAAAAAAbAAsAAgABAAAAAAAbAAoAAgACAAAAAAAbAAkAAgABAAAAAAAbAAgAAgABAAAAAAAbAAcAAgAHAAAAAAAbAAYAAgAAAAAAAAAbAAUAAgAAAAAAAAAbAAQAAgAEAAAAAAAbAAMAAgAFAAAAAAAbAAIAAgAAAAAAAAAbAAEAAgAGAAAAAAAbAAAAAgABABAAAAAaABAAAgAFAAAAAAAaAA8AAgABAAAAAAAaAA4AAgAAAAAAAAAaAA0AAgAEAAAAAAAaAAwAAgAAAAAAAAAaAAsAAgAAAAAAAAAaAAoAAgAAAAAAAAAaAAkAAgAEAAAAAAAaAAgAAgAHAAAAAAAaAAcAAgAAAAAAAAAaAAYAAgAEAAAAAAAaAAUAAgACAAAAAAAaAAQAAgAHAAAAAAAaAAMAAgAEAAAAAAAaAAIAAgACAAAAAAAaAAEAAgABAAAAAAAaAAAAAgABABAAAAAZABAAAgAFAAAAAAAZAA8AAgAAAAAAAAAZAA4AAgAEAAAAAAAZAA0AAgAEAAAAAAAZAAwAAgAFAAAAAAAZAAsAAgAEAAAAAAAZAAoAAgAFAAAAAAAZAAkAAgACAAAAAAAZAAgAAgAEAAAAAAAZAAcAAgABAAAAAAAZAAYAAgAAAAAAAAAZAAUAAgAAAAAAAAAZAAQAAgAFAAAAAAAZAAMAAgACAAAAAAAZAAIAAgAAAAAAAAAZAAEAAgAFAAAAAAAZAAAAAgABABAAAAAYABAAAgAHAAAAAAAYAA8AAgAAAAAAAAAYAA4AAgAGAAAAAAAYAA0AAgAAAAAAAAAYAAwAAgAAAAAAAAAYAAsAAgAAAAAAAAAYAAoAAgAAAAAAAAAYAAkAAgAAAAAAAAAYAAgAAgAAAAAAAAAYAAcAAgAEAAAAAAAYAAYAAgAAAAAAAAAYAAUAAgABAAAAAAAYAAQAAgACAAAAAAAYAAMAAgAAAAAAAAAYAAIAAgAHAAAAAAAYAAEAAgAHAAAAAAAYAAAAAgABABAAAAAXABAAAgABAAAAAAAXAA8AAgAAAAAAAAAXAA4AAgACAAAAAAAXAA0AAgAAAAAAAAAXAAwAAgAEAAAAAAAXAAsAAgABAAAAAAAXAAoAAgAAAAAAAAAXAAkAAgAAAAAAAAAXAAgAAgAFAAAAAAAXAAcAAgAAAAAAAAAXAAYAAgABAAAAAAAXAAUAAgAAAAAAAAAXAAQAAgAFAAAAAAAXAAMAAgAAAAAAAAAXAAIAAgAAAAAAAAAXAAEAAgAHAAAAAAAXAAAAAgABABAAAAAWABAAAgACAAAAAAAWAA8AAgAAAAAAAAAWAA4AAgACAAAAAAAWAA0AAgAGAAAAAAAWAAwAAgAAAAAAAAAWAAsAAgAAAAAAAAAWAAoAAgAGAAAAAAAWAAkAAgAAAAAAAAAWAAgAAgAAAAAAAAAWAAcAAgAEAAAAAAAWAAYAAgABAAAAAAAWAAUAAgAAAAAAAAAWAAQAAgAHAAAAAAAWAAMAAgAAAAAAAAAWAAIAAgABAAAAAAAWAAEAAgAAAAAAAAAWAAAAAgABABAAAAAVABAAAgACAAAAAAAVAA8AAgAAAAAAAAAVAA4AAgAAAAAAAAAVAA0AAgAAAAAAAAAVAAwAAgAAAAAAAAAVAAsAAgAAAAAAAAAVAAoAAgACAAAAAAAVAAkAAgAAAAAAAAAVAAgAAgAAAAAAAAAVAAcAAgAFAAAAAAAVAAYAAgACAAAAAAAVAAUAAgAAAAAAAAAVAAQAAgADAAAAAAAVAAMAAgABAAAAAAAVAAIAAgAFAAAAAAAVAAEAAgADAAAAAAAVAAAAAgABABAAAAAUABAAAgACAAAAAAAUAA8AAgAFAAAAAAAUAA4AAgAAAAAAAAAUAA0AAgAAAAAAAAAUAAwAAgAAAAAAAAAUAAsAAgACAAAAAAAUAAoAAgACAAAAAAAUAAkAAgAAAAAAAAAUAAgAAgACAAAAAAAUAAcAAgAFAAAAAAAUAAYAAgAAAAAAAAAUAAUAAgAAAAAAAAAUAAQAAgAAAAAAAAAUAAMAAgAAAAAAAAAUAAIAAgADAAAAAAAUAAEAAgAAAAAAAAAUAAAAAgABABAAAAATABAAAgAGAAAAAAATAA8AAgACAAAAAAATAA4AAgABAAAAAAATAA0AAgACAAAAAAATAAwAAgAFAAAAAAATAAsAAgABAAAAAAATAAoAAgAAAAAAAAATAAkAAgAGAAAAAAATAAgAAgAAAAAAAAATAAcAAgACAAAAAAATAAYAAgAAAAAAAAATAAUAAgAFAAAAAAATAAQAAgAAAAAAAAATAAMAAgAAAAAAAAATAAIAAgAEAAAAAAATAAEAAgAAAAAAAAATAAAAAgABABAAAAASABAAAgAFAAAAAAASAA8AAgAAAAAAAAASAA4AAgAAAAAAAAASAA0AAgAGAAAAAAASAAwAAgABAAAAAAASAAsAAgACAAAAAAASAAoAAgACAAAAAAASAAkAAgAAAAAAAAASAAgAAgAAAAAAAAASAAcAAgABAAAAAAASAAYAAgAGAAAAAAASAAUAAgAHAAAAAAASAAQAAgAEAAAAAAASAAMAAgAAAAAAAAASAAIAAgABAAAAAAASAAEAAgACAAAAAAASAAAAAgABABAAAAARABAAAgADAAAAAAARAA8AAgAEAAAAAAARAA4AAgAAAAAAAAARAA0AAgAEAAAAAAARAAwAAgAAAAAAAAARAAsAAgAAAAAAAAARAAoAAgAAAAAAAAARAAkAAgAAAAAAAAARAAgAAgAAAAAAAAARAAcAAgACAAAAAAARAAYAAgAEAAAAAAARAAUAAgAAAAAAAAARAAQAAgABAAAAAAARAAMAAgAHAAAAAAARAAIAAgAAAAAAAAARAAEAAgAGAAAAAAARAAAAAgABABAAAAAQABAAAgADAAAAAAAQAA8AAgAEAAAAAAAQAA4AAgAAAAAAAAAQAA0AAgAAAAAAAAAQAAwAAgAAAAAAAAAQAAsAAgAAAAAAAAAQAAoAAgABAAAAAAAQAAkAAgABAAAAAAAQAAgAAgAAAAAAAAAQAAcAAgACAAAAAAAQAAYAAgAGAAAAAAAQAAUAAgAAAAAAAAAQAAQAAgAAAAAAAAAQAAMAAgAAAAAAAAAQAAIAAgAEAAAAAAAQAAEAAgAAAAAAAAAQAAAAAgABABAAAAAPABAAAgABAAAAAAAPAA8AAgAAAAAAAAAPAA4AAgABAAAAAAAPAA0AAgAAAAAAAAAPAAwAAgAAAAAAAAAPAAsAAgAAAAAAAAAPAAoAAgAAAAAAAAAPAAkAAgAAAAAAAAAPAAgAAgAAAAAAAAAPAAcAAgAEAAAAAAAPAAYAAgACAAAAAAAPAAUAAgAEAAAAAAAPAAQAAgAAAAAAAAAPAAMAAgAHAAAAAAAPAAIAAgAEAAAAAAAPAAEAAgAAAAAAAAAPAAAAAgABABAAAAAOABAAAgAAAAAAAAAOAA8AAgAAAAAAAAAOAA4AAgAAAAAAAAAOAA0AAgAEAAAAAAAOAAwAAgACAAAAAAAOAAsAAgAHAAAAAAAOAAoAAgAAAAAAAAAOAAkAAgAFAAAAAAAOAAgAAgADAAAAAAAOAAcAAgAHAAAAAAAOAAYAAgAAAAAAAAAOAAUAAgAAAAAAAAAOAAQAAgAGAAAAAAAOAAMAAgAAAAAAAAAOAAIAAgAAAAAAAAAOAAEAAgAAAAAAAAAOAAAAAgABABAAAAANABAAAgAAAAAAAAANAA8AAgABAAAAAAANAA4AAgAAAAAAAAANAA0AAgAAAAAAAAANAAwAAgAAAAAAAAANAAsAAgAAAAAAAAANAAoAAgAFAAAAAAANAAkAAgAAAAAAAAANAAgAAgAEAAAAAAANAAcAAgACAAAAAAANAAYAAgAAAAAAAAANAAUAAgAAAAAAAAANAAQAAgACAAAAAAANAAMAAgAFAAAAAAANAAIAAgAAAAAAAAANAAEAAgABAAAAAAANAAAAAgABABAAAAAMABAAAgACAAAAAAAMAA8AAgAGAAAAAAAMAA4AAgAAAAAAAAAMAA0AAgAAAAAAAAAMAAwAAgAEAAAAAAAMAAsAAgAAAAAAAAAMAAoAAgAAAAAAAAAMAAkAAgAAAAAAAAAMAAgAAgABAAAAAAAMAAcAAgABAAAAAAAMAAYAAgABAAAAAAAMAAUAAgAHAAAAAAAMAAQAAgAAAAAAAAAMAAMAAgACAAAAAAAMAAIAAgAAAAAAAAAMAAEAAgADAAAAAAAMAAAAAgABABAAAAALABAAAgADAAAAAAALAA8AAgACAAAAAAALAA4AAgAAAAAAAAALAA0AAgAHAAAAAAALAAwAAgAAAAAAAAALAAsAAgAAAAAAAAALAAoAAgADAAAAAAALAAkAAgAFAAAAAAALAAgAAgAAAAAAAAALAAcAAgAFAAAAAAALAAYAAgAAAAAAAAALAAUAAgABAAAAAAALAAQAAgABAAAAAAALAAMAAgAAAAAAAAALAAIAAgAAAAAAAAALAAEAAgAGAAAAAAALAAAAAgABABAAAAAKABAAAgAAAAAAAAAKAA8AAgAFAAAAAAAKAA4AAgAAAAAAAAAKAA0AAgAAAAAAAAAKAAwAAgAHAAAAAAAKAAsAAgAAAAAAAAAKAAoAAgAFAAAAAAAKAAkAAgAAAAAAAAAKAAgAAgAGAAAAAAAKAAcAAgACAAAAAAAKAAYAAgACAAAAAAAKAAUAAgAAAAAAAAAKAAQAAgABAAAAAAAKAAMAAgABAAAAAAAKAAIAAgAEAAAAAAAKAAEAAgAAAAAAAAAKAAAAAgABABAAAAAJABAAAgADAAAAAAAJAA8AAgAFAAAAAAAJAA4AAgAAAAAAAAAJAA0AAgABAAAAAAAJAAwAAgAAAAAAAAAJAAsAAgAAAAAAAAAJAAoAAgAHAAAAAAAJAAkAAgAGAAAAAAAJAAgAAgAHAAAAAAAJAAcAAgAFAAAAAAAJAAYAAgAAAAAAAAAJAAUAAgAGAAAAAAAJAAQAAgAEAAAAAAAJAAMAAgAFAAAAAAAJAAIAAgAAAAAAAAAJAAEAAgAAAAAAAAAJAAAAAgABABAAAAAIABAAAgAAAAAAAAAIAA8AAgAAAAAAAAAIAA4AAgAAAAAAAAAIAA0AAgACAAAAAAAIAAwAAgABAAAAAAAIAAsAAgABAAAAAAAIAAoAAgABAAAAAAAIAAkAAgAAAAAAAAAIAAgAAgAAAAAAAAAIAAcAAgAHAAAAAAAIAAYAAgABAAAAAAAIAAUAAgACAAAAAAAIAAQAAgAGAAAAAAAIAAMAAgADAAAAAAAIAAIAAgAAAAAAAAAIAAEAAgACAAAAAAAIAAAAAgABABAAAAAHABAAAgAGAAAAAAAHAA8AAgAHAAAAAAAHAA4AAgAFAAAAAAAHAA0AAgADAAAAAAAHAAwAAgAHAAAAAAAHAAsAAgAAAAAAAAAHAAoAAgAAAAAAAAAHAAkAAgAAAAAAAAAHAAgAAgABAAAAAAAHAAcAAgAGAAAAAAAHAAYAAgAGAAAAAAAHAAUAAgACAAAAAAAHAAQAAgAEAAAAAAAHAAMAAgABAAAAAAAHAAIAAgAGAAAAAAAHAAEAAgAAAAAAAAAHAAAAAgABABAAAAAGABAAAgABAAAAAAAGAA8AAgAEAAAAAAAGAA4AAgACAAAAAAAGAA0AAgAAAAAAAAAGAAwAAgAAAAAAAAAGAAsAAgAFAAAAAAAGAAoAAgAAAAAAAAAGAAkAAgAAAAAAAAAGAAgAAgAHAAAAAAAGAAcAAgAHAAAAAAAGAAYAAgAAAAAAAAAGAAUAAgADAAAAAAAGAAQAAgAAAAAAAAAGAAMAAgAAAAAAAAAGAAIAAgABAAAAAAAGAAEAAgAEAAAAAAAGAAAAAgABABAAAAAFABAAAgAAAAAAAAAFAA8AAgABAAAAAAAFAA4AAgABAAAAAAAFAA0AAgAAAAAAAAAFAAwAAgAAAAAAAAAFAAsAAgAAAAAAAAAFAAoAAgAAAAAAAAAFAAkAAgAEAAAAAAAFAAgAAgACAAAAAAAFAAcAAgABAAAAAAAFAAYAAgABAAAAAAAFAAUAAgABAAAAAAAFAAQAAgAAAAAAAAAFAAMAAgAAAAAAAAAFAAIAAgADAAAAAAAFAAEAAgAGAAAAAAAFAAAAAgABABAAAAAEABAAAgAHAAAAAAAEAA8AAgACAAAAAAAEAA4AAgAAAAAAAAAEAA0AAgABAAAAAAAEAAwAAgAAAAAAAAAEAAsAAgACAAAAAAAEAAoAAgABAAAAAAAEAAcAAgAAAAAAAAAEAAYAAgAAAAAAAAAEAAUAAgAAAAAAAAAEAAQAAgAHAAAAAAAEAAMAAgAGAAAAAAAEAAIAAgAAAAAAAAAEAAEAAgADAAAAAAAEAAAAAgABABAAAAADABAAAgABAAAAAAADAA8AAgAHAAAAAAADAA4AAgACAAAAAAADAA0AAgAAAAAAAAADAAwAAgAGAAAAAAADAAYAAgAHAAAAAAADAAUAAgADAAAAAAADAAQAAgACAAAAAAADAAMAAgAGAAAAAAADAAIAAgAAAAAAAAADAAEAAgACAAAAAAADAAAAAgABABAAAAACABAAAgAAAAAAAAACAA8AAgAGAAAAAAACAA4AAgAGAAAAAAACAAkAAgAGAAAAAAACAAUAAgAAAAAAAAACAAQAAgAEAAAAAAACAAMAAgAAAAAAAAACAAIAAgABAAAAAAACAAEAAgAAAAAAAAACAAAAAgABABAAAAABABAAAgAHAAAAAAABAA8AAgAAAAAAAAABAA4AAgAAAAAAAAABAAkAAgAAAAAAAAABAAgAAgACAAAAAAABAAQAAgAEAAAAAAABAAMAAgACAAAAAAABAAIAAgAAAAAAAAABAAEAAgAAAAAAAAABAAAAAgABABAAAAAAABAAAgAAABEAAAAAAA8AAgAAABEAAAAAAA4AAgAAABEAAAAAAA0AAgAAABEAAAAAAAwAAgAAABEAAAAAAAsAAgAAABEAAAAAAAoAAgAAABEAAAAAAAkAAgAAABEAAAAAAAgAAgAAABEAAAAAAAcAAgAAABEAAAAAAAYAAgAAABEAAAAAAAUAAgAAABEAAAAAAAQAAgAAABEAAAAAAAMAAgAAABEAAAAAAAIAAgAAABEAAAAAAAEAAgAAABEAAAAAAAAAAgAAABAAAAAnABUAAgAAAAAAAAAnABQAAgAGAAAAAAAnABMAAgABAAAAAAAnABIAAgAFAAAAAAAnABEAAgABAAAAAAAnABAAAgAAAAAAAAAnAA8AAgAFAAAAAAAnAA4AAgAEAAAAAAAnAA0AAgAGAAAAAAAnAAwAAgAAAAAAAAAnAAsAAgAAAAAAAAAnAAoAAgACAAAAAAAnAAkAAgAAAAAAAAAnAAgAAgAAAAAAAAAnAAcAAgAFAAAAAAAnAAYAAgAAAAAAAAAnAAUAAgAAAAAAAAAnAAQAAgABAAAAAAAnAAMAAgABAAAAAAAnAAIAAgAFAAAAAAAnAAEAAgACAAAAAAAmABUAAgAAAAAAAAAmABQAAgAFAAAAAAAmABMAAgAAAAAAAAAmABIAAgAGAAAAAAAmABEAAgAAAAAAAAAmABAAAgAAAAAAAAAmAA8AAgAAAAAAAAAmAA4AAgAAAAAAAAAmAA0AAgACAAAAAAAmAAwAAgAAAAAAAAAmAAsAAgAAAAAAAAAmAAoAAgAAAAAAAAAmAAkAAgAAAAAAAAAmAAgAAgAEAAAAAAAmAAcAAgAAAAAAAAAmAAYAAgABAAAAAAAmAAUAAgABAAAAAAAmAAQAAgAHAAAAAAAmAAMAAgAGAAAAAAAmAAIAAgAEAAAAAAAmAAEAAgAAAAAAAAAlABUAAgACAAAAAAAlABQAAgAFAAAAAAAlABMAAgAAAAAAAAAlABIAAgAAAAAAAAAlABEAAgAAAAAAAAAlABAAAgAAAAAAAAAlAA8AAgAAAAAAAAAlAA4AAgAAAAAAAAAlAA0AAgADAAAAAAAlAAwAAgAHAAAAAAAlAAsAAgAHAAAAAAAlAAoAAgAAAAAAAAAlAAkAAgAFAAAAAAAlAAgAAgAEAAAAAAAlAAcAAgADAAAAAAAlAAYAAgAFAAAAAAAlAAUAAgACAAAAAAAlAAQAAgAEAAAAAAAlAAMAAgADAAAAAAAlAAIAAgAAAAAAAAAlAAEAAgAFAAAAAAAkABUAAgAAAAAAAAAkABQAAgAFAAAAAAAkABMAAgAAAAAAAAAkABIAAgAAAAAAAAAkABEAAgAAAAAAAAAkABAAAgADAAAAAAAkAA8AAgAHAAAAAAAkAA4AAgACAAAAAAAkAA0AAgAHAAAAAAAkAAwAAgAHAAAAAAAkAAsAAgAAAAAAAAAkAAoAAgAAAAAAAAAkAAkAAgABAAAAAAAkAAgAAgAHAAAAAAAkAAcAAgAAAAAAAAAkAAYAAgACAAAAAAAkAAUAAgAEAAAAAAAkAAQAAgAFAAAAAAAkAAMAAgAAAAAAAAAkAAIAAgAHAAAAAAAkAAEAAgAAAAAAAAAjABUAAgAFAAAAAAAjABQAAgAEAAAAAAAjABMAAgABAAAAAAAjABIAAgAAAAAAAAAjABEAAgABAAAAAAAjABAAAgAAAAAAAAAjAA8AAgAFAAAAAAAjAA4AAgAFAAAAAAAjAA0AAgAAAAAAAAAjAAwAAgADAAAAAAAjAAsAAgABAAAAAAAjAAoAAgAAAAAAAAAjAAkAAgAHAAAAAAAjAAgAAgADAAAAAAAjAAcAAgAEAAAAAAAjAAYAAgAAAAAAAAAjAAUAAgAAAAAAAAAjAAQAAgABAAAAAAAjAAMAAgAAAAAAAAAjAAIAAgAAAAAAAAAjAAEAAgACAAAAAAAiABUAAgACAAAAAAAiABQAAgACAAAAAAAiABMAAgAHAAAAAAAiABIAAgACAAAAAAAiABEAAgADAAAAAAAiABAAAgAAAAAAAAAiAA8AAgAGAAAAAAAiAA4AAgAFAAAAAAAiAA0AAgABAAAAAAAiAAwAAgACAAAAAAAiAAsAAgACAAAAAAAiAAoAAgAAAAAAAAAiAAkAAgAAAAAAAAAiAAgAAgADAAAAAAAiAAcAAgACAAAAAAAiAAYAAgAGAAAAAAAiAAUAAgABAAAAAAAiAAQAAgAFAAAAAAAiAAMAAgAFAAAAAAAiAAIAAgAGAAAAAAAiAAEAAgAHAAAAAAAhABUAAgAAAAAAAAAhABQAAgAAAAAAAAAhABMAAgACAAAAAAAhABIAAgACAAAAAAAhABEAAgABAAAAAAAhABAAAgAFAAAAAAAhAA8AAgADAAAAAAAhAA4AAgAAAAAAAAAhAA0AAgAAAAAAAAAhAAwAAgAAAAAAAAAhAAsAAgADAAAAAAAhAAoAAgAAAAAAAAAhAAkAAgABAAAAAAAhAAgAAgAAAAAAAAAhAAcAAgAAAAAAAAAhAAYAAgAHAAAAAAAhAAUAAgAFAAAAAAAhAAQAAgACAAAAAAAhAAMAAgAEAAAAAAAhAAIAAgAGAAAAAAAhAAEAAgAAAAAAAAAgABUAAgAAAAAAAAAgABQAAgAAAAAAAAAgABMAAgAAAAAAAAAgABIAAgAAAAAAAAAgABEAAgAAAAAAAAAfABUAAgACAAAAAAAfABQAAgAAAAAAAAAfABMAAgAHAAAAAAAfABIAAgAGAAAAAAAfABEAAgACAAAAAAAeABUAAgAGAAAAAAAeABQAAgAAAAAAAAAeABMAAgAAAAAAAAAeABIAAgAAAAAAAAAeABEAAgAEAAAAAAAdABUAAgACAAAAAAAdABQAAgAGAAAAAAAdABMAAgACAAAAAAAdABIAAgAAAAAAAAAdABEAAgAHAAAAAAAcABUAAgAFAAAAAAAcABQAAgAAAAAAAAAcABMAAgAAAAAAAAAcABIAAgAAAAAAAAAcABEAAgACAAAAAAAbABUAAgADAAAAAAAbABQAAgAAAAAAAAAbABMAAgADAAAAAAAbABIAAgAHAAAAAAAbABEAAgAAAAAAAAAaABUAAgAHAAAAAAAaABQAAgADAAAAAAAaABMAAgAEAAAAAAAaABIAAgAFAAAAAAAaABEAAgAAAAAAAAAZABUAAgABAAAAAAAZABQAAgAGAAAAAAAZABMAAgAAAAAAAAAZABIAAgACAAAAAAAZABEAAgABAAAAAAAYABUAAgAAAAAAAAAYABQAAgAEAAAAAAAYABMAAgAHAAAAAAAYABIAAgACAAAAAAAYABEAAgAAAAAAAAAXABUAAgABAAAAAAAXABQAAgAAAAAAAAAXABMAAgAAAAAAAAAXABIAAgACAAAAAAAXABEAAgAGAAAAAAAWABUAAgAAAAAAAAAWABQAAgAAAAAAAAAWABMAAgAAAAAAAAAWABIAAgABAAAAAAAWABEAAgABAAAAAAAVABUAAgAAAAAAAAAVABQAAgAGAAAAAAAVABMAAgAAAAAAAAAVABIAAgAEAAAAAAAVABEAAgAHAAAAAAAUABUAAgADAAAAAAAUABQAAgAAAAAAAAAUABMAAgAEAAAAAAAUABIAAgACAAAAAAAUABEAAgAFAAAAAAATABUAAgAAAAAAAAATABQAAgACAAAAAAATABMAAgAAAAAAAAATABIAAgADAAAAAAATABEAAgAAAAAAAAASABUAAgAAAAAAAAASABQAAgABAAAAAAASABMAAgAHAAAAAAASABIAAgAAAAAAAAASABEAAgAGAAAAAAARABUAAgACAAAAAAARABQAAgAEAAAAAAARABMAAgAHAAAAAAARABIAAgAAAAAAAAARABEAAgAGAAAAAAAQABUAAgAFAAAAAAAQABQAAgABAAAAAAAQABMAAgAHAAAAAAAQABIAAgAAAAAAAAAQABEAAgADAAAAAAAPABUAAgABAAAAAAAPABQAAgAAAAAAAAAPABMAAgAAAAAAAAAPABIAAgAAAAAAAAAPABEAAgACAAAAAAAOABUAAgABAAAAAAAOABQAAgAEAAAAAAAOABMAAgAAAAAAAAAOABIAAgAHAAAAAAAOABEAAgABAAAAAAANABUAAgAAAAAAAAANABQAAgAGAAAAAAANABMAAgAFAAAAAAANABIAAgAHAAAAAAANABEAAgACAAAAAAAMABUAAgAFAAAAAAAMABQAAgAHAAAAAAAMABMAAgAFAAAAAAAMABIAAgAGAAAAAAAMABEAAgADAAAAAAALABUAAgAGAAAAAAALABQAAgAEAAAAAAALABMAAgAAAAAAAAALABIAAgAAAAAAAAALABEAAgABAAAAAAAKABUAAgABAAAAAAAKABQAAgAAAAAAAAAKABMAAgAAAAAAAAAKABIAAgAAAAAAAAAKABEAAgAAAAAAAAAJABUAAgAHAAAAAAAJABQAAgAAAAAAAAAJABMAAgABAAAAAAAJABIAAgAAAAAAAAAJABEAAgAAAAAAAAAIABUAAgAHAAAAAAAIABQAAgAAAAAAAAAIABMAAgAAAAAAAAAIABIAAgAAAAAAAAAIABEAAgAAAAAAAAAHABUAAgACAAAAAAAHABQAAgAAAAAAAAAHABMAAgAEAAAAAAAHABIAAgAHAAAAAAAHABEAAgAAAAAAAAAGABUAAgADAAAAAAAGABQAAgAHAAAAAAAGABMAAgACAAAAAAAGABIAAgAGAAAAAAAGABEAAgAAAAAAAAAFABUAAgAEAAAAAAAFABQAAgADAAAAAAAFABMAAgAHAAAAAAAFABIAAgACAAAAAAAFABEAAgABAAAAAAAEABUAAgACAAAAAAAEABQAAgAAAAAAAAAEABMAAgABAAAAAAAEABIAAgAFAAAAAAAEABEAAgAAAAAAAAADABUAAgAFAAAAAAADABQAAgAAAAAAAAADABMAAgACAAAAAAADABIAAgAHAAAAAAADABEAAgAAAAAAAAACABUAAgACAAAAAAACABQAAgAEAAAAAAACABMAAgAHAAAAAAACABIAAgAEAAAAAAACABEAAgADAAAAAAAAABwAAgAAABEAAAAAABsAAgAAABEAAAAAABoAAgAAABEAAAAAABkAAgAAABEAAAAAABgAAgAAABEAAAAAABcAAgAAABEAAAAAABYAAgAAABEAAAAAABUAAgAAABEAAAAAABQAAgAAABEAAAAAABMAAgAAABEAAAAAABIAAgAAABEAAAAAABEAAgAAABEAAAAhAAAAAgABABAAAAAiAAAAAgABABAAAAAjAAAAAgABABAAAAAkAAAAAgABABAAAAAlAAAAAgABABAAAAAmAAAAAgABABAAAAAnAAAAAgABABAAAAAoAAAAAgABABAAAAApAAAAAgABABAAAAAqAAAAAgABABAAAAArAAAAAgACABAAAAArAAEAAgACABEAAAArAAIAAgACABEAAAArAAMAAgACABEAAAArAAQAAgACABEAAAArAAUAAgACABEAAAArAAYAAgACABEAAAArAAcAAgACABEAAAArAAgAAgACABEAAAArAAkAAgACABEAAAArAAoAAgACABEAAAArAAsAAgACABEAAAArAAwAAgACABEAAAArAA0AAgACABEAAAArAA4AAgACABEAAAArAA8AAgACABEAAAArABAAAgACABEAAAArABEAAgACABEAAAArABIAAgACABEAAAArABMAAgACABEAAAArABQAAgACABEAAAArABUAAgACABEAAAArABYAAgACABEAAAArABcAAgACABEAAAArABgAAgACABEAAAArABkAAgACABEAAAArABoAAgACABEAAAArABsAAgACABEAAAArABwAAgACABEAAAArAB0AAgACABEAAAAqAB4AAgABABIAAAApAB4AAgABABIAAAAoAB4AAgABABIAAAAnAB4AAgABABIAAAAmAB4AAgABABIAAAAlAB4AAgABABIAAAAkAB4AAgABABIAAAAjAB4AAgABABIAAAAiAB4AAgABABIAAAAhAB4AAgABABIAAAAgAB4AAgABABIAAAAfAB4AAgABABIAAAAeAB4AAgABABIAAAAdAB4AAgABABIAAAAcAB4AAgABABIAAAAbAB4AAgABABIAAAAaAB4AAgABABIAAAAZAB4AAgABABIAAAAYAB4AAgABABIAAAAXAB4AAgABABIAAAAWAB4AAgABABIAAAAVAB4AAgABABIAAAAUAB4AAgABABIAAAATAB4AAgABABIAAAASAB4AAgABABIAAAARAB4AAgABABIAAAAQAB4AAgABABIAAAAPAB4AAgABABIAAAAOAB4AAgABABIAAAANAB4AAgABABIAAAAMAB4AAgABABIAAAALAB4AAgABABIAAAAKAB4AAgABABIAAAAJAB4AAgABABIAAAAIAB4AAgABABIAAAAHAB4AAgABABIAAAAGAB4AAgABABIAAAAFAB4AAgABABIAAAAEAB4AAgABABIAAAADAB4AAgABABIAAAACAB4AAgABABIAAAABAB4AAgABABIAAAAAAB0AAgAAABEAAAAAAB4AAgAAABIAAAArAB4AAgACABIAAAAeABYAAgACAAAAAAAfABYAAgAHAAAAAAAgABcAAgACAAAAAAAhABgAAgABAAAAAAAiABgAAgAAAAAAAAAjABkAAgAHAAAAAAAkABkAAgADAAAAAAAlABoAAgABAAAAAAAmABsAAgABAAAAAAAnABsAAgACAAAAAAAoABwAAgACAAAAAAApABwAAgAHAAAAAAAqAB0AAgAAAAAAAAApAB0AAgAAAAAAAAApABsAAgAAAAAAAAApABoAAgAAAAAAAAApABkAAgAAAAAAAAApABgAAgADAAAAAAApABcAAgAAAAAAAAApABYAAgAAAAAAAAApABUAAgAAAAAAAAApABQAAgAAAAAAAAApABMAAgAAAAAAAAAoAB0AAgAHAAAAAAAoABsAAgAFAAAAAAAoABoAAgABAAAAAAAoABkAAgAAAAAAAAAoABgAAgAAAAAAAAAoABcAAgAAAAAAAAAoABYAAgAAAAAAAAAoABUAAgAAAAAAAAAoABQAAgABAAAAAAAoABMAAgABAAAAAAAnAB0AAgAAAAAAAAAnABwAAgABAAAAAAAnABoAAgAAAAAAAAAnABkAAgAEAAAAAAAnABgAAgABAAAAAAAnABcAAgAAAAAAAAAnABYAAgADAAAAAAAmAB0AAgAEAAAAAAAmABwAAgADAAAAAAAmABoAAgAAAAAAAAAmABkAAgACAAAAAAAmABgAAgABAAAAAAAmABcAAgAAAAAAAAAmABYAAgAHAAAAAAAlAB0AAgAAAAAAAAAlABwAAgAAAAAAAAAlABsAAgABAAAAAAAlABkAAgAAAAAAAAAlABgAAgAEAAAAAAAlABcAAgAAAAAAAAAlABYAAgAAAAAAAAAkAB0AAgAAAAAAAAAkABwAAgAAAAAAAAAkABsAAgABAAAAAAAkABoAAgAAAAAAAAAkABgAAgAAAAAAAAAkABcAAgAAAAAAAAAkABYAAgABAAAAAAAjAB0AAgABAAAAAAAjABwAAgAAAAAAAAAjABsAAgAEAAAAAAAjABoAAgAAAAAAAAAjABgAAgAEAAAAAAAjABcAAgAAAAAAAAAjABYAAgAFAAAAAAAiAB0AAgAFAAAAAAAiABwAAgAFAAAAAAAiABsAAgADAAAAAAAiABoAAgADAAAAAAAiABkAAgAHAAAAAAAiABcAAgACAAAAAAAiABYAAgAAAAAAAAAhAB0AAgAHAAAAAAAhABwAAgAAAAAAAAAhABsAAgAFAAAAAAAhABoAAgABAAAAAAAhABkAAgAFAAAAAAAhABcAAgAAAAAAAAAhABYAAgAAAAAAAAAgAB0AAgAAAAAAAAAgABwAAgAAAAAAAAAgABsAAgAAAAAAAAAgABoAAgACAAAAAAAgABkAAgADAAAAAAAgABgAAgAAAAAAAAAgABYAAgACAAAAAAAfAB0AAgACAAAAAAAfABwAAgACAAAAAAAfABsAAgAAAAAAAAAfABoAAgAAAAAAAAAfABkAAgAAAAAAAAAfABgAAgAFAAAAAAAfABcAAgAAAAAAAAAeAB0AAgAAAAAAAAAeABwAAgACAAAAAAAeABsAAgABAAAAAAAeABoAAgAAAAAAAAAeABkAAgAGAAAAAAAeABgAAgAFAAAAAAAeABcAAgAGAAAAAAAdAB0AAgACAAAAAAAdABwAAgAAAAAAAAAdABsAAgAAAAAAAAAdABoAAgAAAAAAAAAdABkAAgAAAAAAAAAdABgAAgAAAAAAAAAdABcAAgAFAAAAAAAdABYAAgAAAAAAAAAcAB0AAgACAAAAAAAcABwAAgADAAAAAAAcABsAAgABAAAAAAAcABoAAgAGAAAAAAAcABkAAgABAAAAAAAcABgAAgAAAAAAAAAcABcAAgADAAAAAAAcABYAAgAAAAAAAAAbAB0AAgAGAAAAAAAbABwAAgAAAAAAAAAbABsAAgACAAAAAAAbABoAAgAAAAAAAAAbABkAAgAAAAAAAAAbABgAAgABAAAAAAAbABcAAgAAAAAAAAAbABYAAgAEAAAAAAAaAB0AAgABAAAAAAAaABwAAgAAAAAAAAAaABsAAgABAAAAAAAaABoAAgAGAAAAAAAaABkAAgABAAAAAAAaABgAAgAAAAAAAAAaABcAAgAGAAAAAAAaABYAAgAAAAAAAAAZAB0AAgAAAAAAAAAZABwAAgAEAAAAAAAZABsAAgAAAAAAAAAZABoAAgAHAAAAAAAZABkAAgABAAAAAAAZABgAAgAGAAAAAAAZABcAAgADAAAAAAAZABYAAgAAAAAAAAAYAB0AAgAAAAAAAAAYABwAAgAAAAAAAAAYABsAAgAFAAAAAAAYABoAAgACAAAAAAAYABkAAgAAAAAAAAAYABgAAgAAAAAAAAAYABcAAgADAAAAAAAYABYAAgAFAAAAAAAXAB0AAgAFAAAAAAAXABwAAgAAAAAAAAAXABsAAgADAAAAAAAXABoAAgAAAAAAAAAXABkAAgAFAAAAAAAXABgAAgAAAAAAAAAXABcAAgAAAAAAAAAXABYAAgAAAAAAAAAUABsAAgAAAAAAAAAUABoAAgAAAAAAAAAUABkAAgAAAAAAAAAUABgAAgACAAAAAAAUABcAAgAAAAAAAAAUABYAAgAAAAAAAAATABsAAgAAAAAAAAATABoAAgAAAAAAAAATABkAAgAEAAAAAAATABgAAgABAAAAAAATABcAAgAHAAAAAAATABYAAgAEAAAAAAASABsAAgAGAAAAAAASABoAAgABAAAAAAASABkAAgAGAAAAAAASABgAAgAAAAAAAAASABcAAgAAAAAAAAASABYAAgABAAAAAAARABsAAgAHAAAAAAARABoAAgAAAAAAAAARABkAAgAAAAAAAAARABgAAgAAAAAAAAARABcAAgACAAAAAAARABYAAgACAAAAAAAQABsAAgAAAAAAAAAQABoAAgAFAAAAAAAQABkAAgABAAAAAAAQABgAAgAAAAAAAAAQABcAAgACAAAAAAAQABYAAgAAAAAAAAAPABsAAgACAAAAAAAPABoAAgAGAAAAAAAPABkAAgAFAAAAAAAPABgAAgADAAAAAAAPABcAAgACAAAAAAAPABYAAgAAAAAAAAAOABsAAgAAAAAAAAAOABoAAgAGAAAAAAAOABkAAgAAAAAAAAAOABgAAgAFAAAAAAAOABcAAgAAAAAAAAAOABYAAgAFAAAAAAANABsAAgADAAAAAAANABoAAgAFAAAAAAANABkAAgACAAAAAAANABgAAgAAAAAAAAANABcAAgADAAAAAAANABYAAgACAAAAAAAMABsAAgABAAAAAAAMABoAAgAAAAAAAAAMABkAAgABAAAAAAAMABgAAgADAAAAAAAMABcAAgAEAAAAAAAMABYAAgAEAAAAAAALABsAAgABAAAAAAALABoAAgAAAAAAAAALABkAAgAAAAAAAAALABgAAgAFAAAAAAALABcAAgABAAAAAAALABYAAgAAAAAAAAAKABsAAgACAAAAAAAKABoAAgAAAAAAAAAKABkAAgABAAAAAAAKABgAAgAAAAAAAAAKABcAAgAFAAAAAAAKABYAAgAAAAAAAAAJABsAAgAAAAAAAAAJABoAAgAAAAAAAAAJABkAAgAAAAAAAAAJABgAAgAAAAAAAAAJABcAAgAFAAAAAAAJABYAAgAEAAAAAAAWABgAAgABAAAAAAABAAoAAgAAAAAAAAABAAUAAgACAAAAAAABAAYAAgACAAAAAAACAAYAAgAAAAAAAAABAAcAAgAAAAAAAAACAAcAAgACAAAAAAADAAcAAgAAAAAAAAACAAgAAgAHAAAAAAADAAgAAgAAAAAAAAAEAAgAAgAHAAAAAAADAAkAAgAAAAAAAAAEAAkAAgABAAAAAAACAAoAAgAHAAAAAAADAAoAAgABAAAAAAABAAsAAgAAAAAAAAACAAsAAgABAAAAAAADAAsAAgAAAAAAAAABAAwAAgAFAAAAAAACAAwAAgAAAAAAAAABAA0AAgACAAAAAAACAA0AAgACAAAAAAABABEAAgAAAAAAAAABABIAAgAAAAAAAAABABMAAgAGAAAAAAABABQAAgAGAAAAAAABABUAAgAAAAAAAAABABYAAgAAAAAAAAACABYAAgAAAAAAAAADABYAAgACAAAAAAAEABYAAgAAAAAAAAAFABYAAgAAAAAAAAAGABYAAgAHAAAAAAAHABYAAgACAAAAAAAIABYAAgABAAAAAAABABcAAgACAAAAAAACABcAAgABAAAAAAADABcAAgADAAAAAAAEABcAAgAAAAAAAAAFABcAAgAAAAAAAAAGABcAAgAAAAAAAAAHABcAAgACAAAAAAAIABcAAgAAAAAAAAABABgAAgAAAAAAAAACABgAAgABAAAAAAADABgAAgACAAAAAAAEABgAAgAAAAAAAAAFABgAAgADAAAAAAAGABgAAgAAAAAAAAAHABgAAgADAAAAAAAIABgAAgAGAAAAAAAVABYAAgAAAAAAAAAWABYAAgABAAAAAAAVABcAAgAGAAAAAAAWABcAAgAAAAAAAAAVABgAAgAAAAAAAAABABkAAgAGAAAAAAABABoAAgAFAAAAAAABABsAAgAEAAAAAAABABwAAgAAAAAAAAABAB0AAgAHAAAAAAACABkAAgABAAAAAAACABoAAgADAAAAAAACABsAAgAAAAAAAAACABwAAgAHAAAAAAACAB0AAgAAAAAAAAADABkAAgAAAAAAAAADABoAAgAAAAAAAAADABsAAgAEAAAAAAADABwAAgABAAAAAAADAB0AAgAAAAAAAAAEABkAAgAHAAAAAAAEABoAAgAAAAAAAAAEABsAAgADAAAAAAAEABwAAgADAAAAAAAEAB0AAgAAAAAAAAAFABkAAgAFAAAAAAAFABoAAgAGAAAAAAAFABsAAgAAAAAAAAAFABwAAgABAAAAAAAFAB0AAgAAAAAAAAAGABkAAgAAAAAAAAAGABoAAgACAAAAAAAGABsAAgAAAAAAAAAGABwAAgABAAAAAAAGAB0AAgAAAAAAAAAHABkAAgAAAAAAAAAHABoAAgACAAAAAAAHABsAAgAAAAAAAAAHABwAAgAAAAAAAAAHAB0AAgAAAAAAAAAIABkAAgACAAAAAAAIABoAAgAGAAAAAAAIABsAAgAAAAAAAAAIABwAAgAEAAAAAAAIAB0AAgAHAAAAAAAJABwAAgAAAAAAAAAJAB0AAgAAAAAAAAAKABwAAgAAAAAAAAAKAB0AAgAAAAAAAAALABwAAgAAAAAAAAALAB0AAgAAAAAAAAAMABwAAgAAAAAAAAAMAB0AAgAAAAAAAAANABwAAgAAAAAAAAANAB0AAgAAAAAAAAAOABwAAgACAAAAAAAOAB0AAgAAAAAAAAAPABwAAgAEAAAAAAAPAB0AAgACAAAAAAAQABwAAgACAAAAAAAQAB0AAgAHAAAAAAARABwAAgAAAAAAAAARAB0AAgAGAAAAAAASABwAAgABAAAAAAASAB0AAgAAAAAAAAATABwAAgADAAAAAAATAB0AAgAEAAAAAAAUABwAAgAEAAAAAAAUAB0AAgAAAAAAAAAVABkAAgAGAAAAAAAVABoAAgABAAAAAAAVABsAAgADAAAAAAAVABwAAgAAAAAAAAAVAB0AAgACAAAAAAAWABkAAgABAAAAAAAWABoAAgAHAAAAAAAWABsAAgAAAAAAAAAWABwAAgACAAAAAAAWAB0AAgAHAAAAAAAoAAEAAgAAAAAAAAAoAAIAAgAAAAAAAAAoAAMAAgACAAAAAAAoAAQAAgAFAAAAAAAoAAUAAgAGAAAAAAAoAAYAAgABAAAAAAAoAAcAAgAAAAAAAAAoAAgAAgAGAAAAAAAoAAkAAgAAAAAAAAAoAAoAAgABAAAAAAAoAAsAAgAAAAAAAAAoAAwAAgAHAAAAAAAoAA0AAgAAAAAAAAAoAA4AAgAAAAAAAAAoAA8AAgAAAAAAAAAoABAAAgABAAAAAAAoABEAAgADAAAAAAAoABIAAgACAAAAAAApAAEAAgAAAAAAAAApAAIAAgAAAAAAAAApAAMAAgAFAAAAAAApAAQAAgAAAAAAAAApAAUAAgADAAAAAAApAAYAAgAAAAAAAAApAAcAAgACAAAAAAApAAgAAgAAAAAAAAApAAkAAgAAAAAAAAApAAoAAgAAAAAAAAApAAsAAgAAAAAAAAApAAwAAgAFAAAAAAApAA0AAgAAAAAAAAApAA4AAgAAAAAAAAApAA8AAgAAAAAAAAApABAAAgAGAAAAAAApABEAAgAGAAAAAAApABIAAgAEAAAAAAAqAAEAAgAFAAAAAAAqAAIAAgAAAAAAAAAqAAMAAgAGAAAAAAAqAAQAAgAAAAAAAAAqAAUAAgAFAAAAAAAqAAYAAgAEAAAAAAAqAAcAAgAHAAAAAAAqAAgAAgABAAAAAAAqAAkAAgAHAAAAAAAqAAoAAgADAAAAAAAqAAsAAgAAAAAAAAAqAAwAAgAAAAAAAAAqAA0AAgAHAAAAAAAqAA4AAgAHAAAAAAAqAA8AAgAHAAAAAAAqABAAAgACAAAAAAAqABEAAgAAAAAAAAAqABIAAgAAAAAAAAAqABMAAgACAAAAAAAqABQAAgAGAAAAAAAqABUAAgAAAAAAAAAqABYAAgAAAAAAAAAqABcAAgAAAAAAAAAqABgAAgAHAAAAAAAqABkAAgAAAAAAAAAqABoAAgAEAAAAAAAqABsAAgACAAAAAAAqABwAAgAGAAAAAAA=")
tile_set = ExtResource("8_ss43a")

[node name="SpawnRect" type="ReferenceRect" parent="."]
custom_minimum_size = Vector2(414, 216)
offset_left = 113.0
offset_top = 73.0
offset_right = 527.0
offset_bottom = 289.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="StaticBodies" type="Node2D" parent="."]
position = Vector2(-500, -500)

[node name="StaticBody2D" type="StaticBody2D" parent="StaticBodies"]
position = Vector2(79, 185)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBodies/StaticBody2D"]
shape = SubResource("RectangleShape2D_6hyye")
metadata/_edit_lock_ = true

[node name="StaticBody2D2" type="StaticBody2D" parent="StaticBodies"]
position = Vector2(561, 185)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBodies/StaticBody2D2"]
shape = SubResource("RectangleShape2D_6hyye")
metadata/_edit_lock_ = true

[node name="StaticBody2D3" type="StaticBody2D" parent="StaticBodies"]
position = Vector2(320, 39)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBodies/StaticBody2D3"]
shape = SubResource("RectangleShape2D_gx8es")
metadata/_edit_lock_ = true

[node name="StaticBody2D4" type="StaticBody2D" parent="StaticBodies"]
position = Vector2(320, 321)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBodies/StaticBody2D4"]
shape = SubResource("RectangleShape2D_gx8es")
metadata/_edit_lock_ = true

[node name="BackgroundEffects" type="Node2D" parent="."]

[node name="YSortRoot" type="Node2D" parent="."]
y_sort_enabled = true
